--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sass": "^1.32.2"
   },
   "devDependencies": {},
   "scripts": {
