--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,29 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "core-js": "^3.8.2",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "sass": "^1.32.4"
+    "path": "^0.12.7",
+    "sass": "^1.32.4",
+    "stream": "0.0.2",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^4.5.1",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-dev-server": "^3.11.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "sass" : "node-sass ./public/scss --output ./public/css"
+    "build": "npx webpack",
+    "start": "webpack serve",
+    "sass": "node-sass ./public/scss --output ./public/css"
   },
   "repository": {
     "type": "git",
