--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,11 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
+    "style-loader": "^2.0.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-dev-server": "^3.11.2"
   },
